--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -160,11 +160,13 @@ A transition from the ballistic regime to the pseudo-diffusional regime (where t
 \caption{ Plots of the MSD at the last two timescales considered in Figure~\ref{fgr:MSD_init}. On the left, the timescale between \SI{0.01}{\ns} and \SI{0.4}{\ns} is considered. The MSD is fitted using a power function with the same previously determined exponent, and a linear fit is provided to demonstrate its incompatibility with the diffusion equation. On the right, a similar approach is employed for the timescale between \SI{0.4}{\ns} and \SI{9}{\ns}. }\label{fgr:MSD_linear_init}
 \end{figure}
 
-By fitting a linear relation using the right plot of Figure~\ref{fgr:MSD_linear_init} and deducing the diffusion coefficient, an underestimated value of the diffusion coefficient of $2.24\times 10^{-8}$~\si{\square\cm\per\s} is obtained --- it is an underestimation due to the concave nature of the MSD, which reduces the slope in the fitting process. However, this value is already a good estimation of the diffusion coefficient, considering the relatively high value of the exponent $\alpha=0.7$ in the fitting equation $K_\alpha\tau^\alpha$.
+By fitting a linear relation using the right plot of Figure~\ref{fgr:MSD_linear_init} and deducing the diffusion coefficient, an underestimated value of the diffusion coefficient of $2.24\,10^{-8}$~\si{\square\cm\per\s} is obtained --- it is an underestimation due to the concave nature of the MSD, which reduces the slope in the fitting process. However, this value is already a good estimation of the diffusion coefficient, considering the relatively high value of the exponent $\alpha=0.7$ in the fitting equation $K_\alpha\tau^\alpha$.
 
-To account for the randomness in the initial position of xenon (block pockets have been calculated for a \SI{1.5}{\angstrom}-radius probe), it is necessary to measure the effect of running different MD simulations of the value of the diffusion coefficients. The uncertainty across various MD simulations with different initial positions determined by different random seeds needs to be quantified. In RASPA2, the random seed is equal to the UNIX time upon launching the MD simulation, ensuring that each of the $10$ different MD simulations is assigned a different random seed while using the exact same parameters, as previously mentioned. The diffusion coefficient values were averaged over these simulations, resulting in an average diffusion coefficient of $2.13\times 10^{-8}$~\si{\square\cm\per\s} and a standard deviation of $0.37\times 10^{-8}$~\si{\square\cm\per\s}, representing approximately {17\%} of the average value. The uncertainty in the diffusion coefficient is estimated to be around {17\%} for a relatively low coefficient of around $10^{-8}$ cm²/s, with lower uncertainty expected for less obstructive materials. It is worth mentioning that in the particular case of \texttt{KAXQIL}, where all pores are symmetrically equivalent, the dynamics is more straightforward than for more complex pore architectures that will be tackled later in this chapter.
+To account for the randomness in the initial position of xenon (block pockets have been calculated for a \SI{1.5}{\angstrom}-radius probe), it is necessary to measure the effect of running different MD simulations of the value of the diffusion coefficients. The uncertainty across various MD simulations with different initial positions determined by different random seeds needs to be quantified. In RASPA2, the random seed is equal to the UNIX time upon launching the MD simulation, ensuring that each of the $10$ different MD simulations is assigned a different random seed while using the exact same parameters, as previously mentioned. The diffusion coefficient values were averaged over these simulations, resulting in an average diffusion coefficient of $2.13\,10^{-8}$~\si{\square\cm\per\s} and a standard deviation of $0.37\,10^{-8}$~\si{\square\cm\per\s}, representing approximately {17\%} of the average value. The uncertainty in the diffusion coefficient is estimated to be around {17\%} for a relatively low coefficient of around $10^{-8}$ cm²/s, with lower uncertainty expected for less obstructive materials. It is worth mentioning that in the particular case of \texttt{KAXQIL}, where all pores are symmetrically equivalent, the dynamics is more straightforward than for more complex pore architectures that will be tackled later in this chapter.
 
-Increased confidence in the method led to the exploration of higher timescales beyond the reach the previous MD simulation, as the occurrence of the diffusion regime was observed at the \SI{10}{\ns} timescale. \todo{1 fs and 2.5 billion steps, results to compared on the same timescale {2}--{47}~\si{\ns} } An initial calculation with 500 million steps and a timestep of \SI{5}{\fs} was performed to validate the diffusion coefficient value. The time window between \SI{2}{\ns} and \SI{47}{\ns} was considered, and the MSD was calculated from approximately 200 sampled trajectories, resulting in reasonably accurate values. A more accurate diffusion coefficient of $2.6\times 10^{-8}$~\si{\square\cm\per\s} was obtained, which is very close to the value obtained using the previous approach. The value is slightly higher (which was expected), as the previous value was overestimated. Thus, this approach is consistent with the previous one.
+Increased confidence in the method led to the exploration of higher timescales beyond the reach the previous MD simulation, as the occurrence of the diffusion regime was observed at the \SI{10}{\ns} timescale. An MD simulation is consequently performed with a 1~\si{\fs}-timestep and 2.5 billion steps on the same \texttt{KAXQIL} structure. With this longer simulation, much larger timescales could be probed such as the one between {2} to {47}~\si{\ns}, which was confirmed as a linear diffusion regime in the MSD plot. A self-diffusion coefficient value of $1.7\,10^{-8}$~\si{\square\cm\per\s} was determined for xenon. This value is slightly lower than the one determined in the yet non-linear regime ($\alpha=0.7$) from the previous approach.
+
+This previous simulation can be considered as the most accurate one, but it is not scalable on an entire database of thousands of structures since it requires 5--6 days to run all the MD steps. To speed up the process, we propose an increase of the timestep value to 5~\si{\fs} with 5 times less MD steps, hence reducing the time required to the order of a day. This simulation presents a linear regime in the {2}--{47}~\si{\ns} timescale with a diffusion coefficient value of \todo{$2.3\,10^{-8}$~\si{\square\cm\per\s}}, which is consistent with the previously reported approaches. 
 
 \begin{figure}[ht]
   \centering
@@ -179,7 +181,7 @@ To further support the use of a higher time integration step, the origin of the 
 
 \subsubsection{Screening procedure}
 
-To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations, such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, only 432 structures \todo{Average number of timsteps completed} completed the simulations at the end of the process, but this does not imply that the MSD data (printed along the MD simulation) cannot be utilized for determining diffusion coefficients. In fact, 5,125 MSD data are exploitable even if the total 500 millions steps were only partially completed. 
+To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations, such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, only 432 structures \todo{Average number of timsteps completed} fully completed the simulations at the end of the process, but this does not imply that the MSD data (printed along the MD simulation) cannot be utilized for determining diffusion coefficients. In fact, 5,125 MSD data are exploitable even if the total 500 millions steps were only partially completed. 
 
 To determine the diffusion coefficients, two timescales (2--47\si{\ns} and 50--950~\si{\ns}) were analyzed to fit the MSD with a linear function. The linear fit with the highest determination coefficient (within the range of $0$ to $1$) for both timescales was chosen to obtain a diffusion coefficient value. After this step, structures with a determination coefficient (R$^2$ that measures the correlation) below $0.9$ were removed, leaving 5,125 structures for drawing structure-diffusivity relationships --- these structures, for which there is a high degree of confidence in the diffusion coefficient values, will be comparatively studied against different geometrical and thermodynamic quantities in this section. Finally, the final 5,125 diffusion coefficients obtained correspond to the slopes of the best linear fit between the 2--47\si{\ns} and 50--950~\si{\ns} timescales.\todo{check FX, if better}
 
@@ -189,7 +191,7 @@ This approach focuses exclusively on the linear relations between the MSD and ti
 
 In this section, different relationships between the diffusion coefficient and simple geometrical descriptors will be presented. A forcefield-dependent definition of radii was chosen to ensure better correlation with the results of the MD simulation that utilized the UFF forcefield. The geometrical descriptors were calculated using Zeo++ and these radii to determine the PLD, the largest sphere diameter D$_{if}$ along a free path, the surface area, and the pore volume, as explained in Chapter 2. The use of UFF-based radii for the PLD was further justified by the original paper~\cite{Hung_2021}, which demonstrated a stronger correlation between the PLD and the diffusion constant. This correlation can also be observed in Figure~\ref{fgr:diff_pld}. The PLD calculated using the standard CCDC-defined atom radii does not fit the diffusion coefficient as well as the UFF-defined PLD. As shown in a smaller scale in the article~\cite{Haldoupis_2010} (see Figure~\ref{fgr:Haldoupis_2010} in Chapter 1), there is a linear relationship between the diffusion activation energy (logarithmic transform of the diffusion coefficient) and the PLD. This linear relationship is much noisier for the PLD defined by the standard CCDC radii than for the UFF-based PLD.
 
-Beyond the practical considerations regarding the calculation of geometrical descriptors, the PLD outlines the variation of diffusion performance within nanoporous materials. First, a linear relationship was observed, as previously highlighted, followed by a plateau. In the first zone, xenon is constrained by channels narrower than its kinetic radius. The diffusion coefficient rises with increasing channel width, and this positive correlation persists until the channel width exceeds approximately \SI{4.6}{\angstrom}. Beyond this threshold, the diffusion coefficient stabilizes around $3\times 10^{-4}$\si{\square\cm\per\s}. Variations in this plateau region can only be attributed to other phenomena, such as tortuosity within nanopores or the chemical nature of the surface of nanopores. The diffusion coefficient value can be interpreted as the diffusion coefficient of a ``free'' xenon, which is less influenced by the surrounding pore surface. For PLD values exceeding \SI{5}{\angstrom}, the channels are sufficiently wide to allow for xenon toonly undergo a minor slowdown. These findings are consistent with experimental data that measured the diffusion coefficient of xenon dissolved in water at different temperature conditions, where a value of $10^{-5}$~\si{\square\cm\per\s} at \SI{303}{\kelvin} was obtained \autocite{Wise1968}, aligning with the values observed centered around $3\times 10^{-4}$~\si{\square\cm\per\s} at the plateau.
+Beyond the practical considerations regarding the calculation of geometrical descriptors, the PLD outlines the variation of diffusion performance within nanoporous materials. First, a linear relationship was observed, as previously highlighted, followed by a plateau. In the first zone, xenon is constrained by channels narrower than its kinetic radius. The diffusion coefficient rises with increasing channel width, and this positive correlation persists until the channel width exceeds approximately \SI{4.6}{\angstrom}. Beyond this threshold, the diffusion coefficient stabilizes around $3\,10^{-4}$\si{\square\cm\per\s}. Variations in this plateau region can only be attributed to other phenomena, such as tortuosity within nanopores or the chemical nature of the surface of nanopores. The diffusion coefficient value can be interpreted as the diffusion coefficient of a ``free'' xenon, which is less influenced by the surrounding pore surface. For PLD values exceeding \SI{5}{\angstrom}, the channels are sufficiently wide to allow for xenon toonly undergo a minor slowdown. These findings are consistent with experimental data that measured the diffusion coefficient of xenon dissolved in water at different temperature conditions, where a value of $10^{-5}$~\si{\square\cm\per\s} at \SI{303}{\kelvin} was obtained \autocite{Wise1968}, aligning with the values observed centered around $3\,10^{-4}$~\si{\square\cm\per\s} at the plateau.
 
 \begin{figure}[ht]
   \centering
@@ -208,7 +210,7 @@ If the channel dimensions (determined using Zeo++) are analyzed, partial informa
     \caption{ Distributions of the base-10 logarithm of the diffusion coefficients of three different subsets of the screened structures. The first one (a) is composed of structures with a unidimensional channel, the second (b) bidimensional channels and the third one (c) tridimensional channels. }\label{fgr:scatter_diffusion_chandim}
 \end{figure}
 
-For this reason, the distribution of diffusion coefficients that depend on the dimensionality of the channels within the framework was plotted in Figure~\ref{fgr:hist_diffusion_chandim}. The distribution for structures containing 1D structures is characterized by a much heavier tail in terms of low diffusion coefficients. Structures with 1D channels are more likely to have very low diffusion coefficients below $3\times 10^{-8}$~\si{\square\cm\per\s}. The vast majority of structures with tridimensional channels tend to have higher diffusion coefficients between $3\times 10^{-6}$~\si{\square\cm\per\s} and $10^{-4}$~\si{\square\cm\per\s}, with almost very few structures having lower diffusion coefficients. The influence of channel dimensionality on diffusion coefficients is not as pronounced for bi- and unidimensional channels. In the case of bi- and unidimensional channels, structures with diffusion coefficients between $3\times 10^{-8}$~\si{\square\cm\per\s} and $3\times 10^{-6}$~\si{\square\cm\per\s} are more common, although less frequent in theory. Therefore, the dimensionality of the channels can influence the values of diffusion coefficients, although the relationship is not as clear as for PLD.
+For this reason, the distribution of diffusion coefficients that depend on the dimensionality of the channels within the framework was plotted in Figure~\ref{fgr:hist_diffusion_chandim}. The distribution for structures containing 1D structures is characterized by a much heavier tail in terms of low diffusion coefficients. Structures with 1D channels are more likely to have very low diffusion coefficients below $3\,10^{-8}$~\si{\square\cm\per\s}. The vast majority of structures with tridimensional channels tend to have higher diffusion coefficients between $3\,10^{-6}$~\si{\square\cm\per\s} and $10^{-4}$~\si{\square\cm\per\s}, with almost very few structures having lower diffusion coefficients. The influence of channel dimensionality on diffusion coefficients is not as pronounced for bi- and unidimensional channels. In the case of bi- and unidimensional channels, structures with diffusion coefficients between $3\,10^{-8}$~\si{\square\cm\per\s} and $3\,10^{-6}$~\si{\square\cm\per\s} are more common, although less frequent in theory. Therefore, the dimensionality of the channels can influence the values of diffusion coefficients, although the relationship is not as clear as for PLD.
 
 \begin{figure}[ht]
   \centering
@@ -218,7 +220,7 @@ For this reason, the distribution of diffusion coefficients that depend on the d
     \caption{ Distributions of diffusion coefficient of three different subsets of the screened structures. The first one (a) is composed of structures with a unidimensional channel, the second (b) bidimensional channels and the third one (c) tridimensional channels. }\label{fgr:hist_diffusion_chandim}
 \end{figure}
 
-Other geometric properties of the material, such as void fraction and surface area, can also influence diffusion. Low diffusion coefficients are typically observed in materials with small pore volumes below $0.6$, as shown in Figure~\ref{fgr:diff_sa_vf}. However, establishing a direct relationship between void fraction and diffusion coefficient is challenging. The only discernible relationship is that materials with void fractions higher than $0.6$ have diffusion coefficients exceeding $3\times 10^{-6}$\si{\square\cm\per\s}. This phenomenon is certainly due to the correlation between PLD and void fraction, as larger PLD values are usually associated with higher void fractions. On the other hand, the accessible surface area for a probe of size $1.2$\si{\angstrom} does not appear to significantly influence the diffusion coefficient.
+Other geometric properties of the material, such as void fraction and surface area, can also influence diffusion. Low diffusion coefficients are typically observed in materials with small pore volumes below $0.6$, as shown in Figure~\ref{fgr:diff_sa_vf}. However, establishing a direct relationship between void fraction and diffusion coefficient is challenging. The only discernible relationship is that materials with void fractions higher than $0.6$ have diffusion coefficients exceeding $3\,10^{-6}$\si{\square\cm\per\s}. This phenomenon is certainly due to the correlation between PLD and void fraction, as larger PLD values are usually associated with higher void fractions. On the other hand, the accessible surface area for a probe of size $1.2$\si{\angstrom} does not appear to significantly influence the diffusion coefficient.
 
 \begin{figure}[ht]
   \centering
@@ -317,19 +319,19 @@ In this section, a detailed analysis of the comparative transport and adsorption
   Structure &       &    &  Pore size &  Channel size   &     & Diffusion Coeff. & Xe uptake \\
   CSD ref.\ code &  $s_0\ex{Xe/Kr}$  &  $s_1\ex{Xe/Kr}$   &    D$_{if}\ex{UFF}$ (\si{\angstrom})   &   PLD\ex{UFF} (\si{\angstrom})  &  $s\e{diff}\ex{Xe/Kr}$ &  $D\e{diff}\ex{Xe}$ (\si{\square\centi\meter\per\second}) & (\si{\milli\mole\per\gram}) \\
 \hline
-\texttt{OQESAF}~\cite{Xie_2011} & 28 & 28 &  5.8 & 5.0 &  17 &  4$\times$10\ex{-5} & 3.2 \\
+\texttt{OQESAF}~\cite{Xie_2011} & 28 & 28 &  5.8 & 5.0 &  17 &  4\,10\ex{-5} & 3.2 \\
 \hline
-\texttt{ADOGEH}~\cite{Peikert_2012} & 49  &  10 & 12.9 & 5.3 & 15.5 &  5$\times$10\ex{-5} & 1.7 \\
+\texttt{ADOGEH}~\cite{Peikert_2012} & 49  &  10 & 12.9 & 5.3 & 15.5 &  5\,10\ex{-5} & 1.7 \\
 \hline
-\texttt{KAXQIL}~\cite{Banerjee2012} & 104  & 133 &  5.2 & 4.1 &  0.005 &  3$\times$10\ex{-8}  & 1.4 \\
-\texttt{XUNSOQ}~\cite{Abrahams_2014} & 38  & 48 &  5.6 & 4.8 &  0.23 &  7$\times$10\ex{-6} & 3.5 \\
-\texttt{BAEDTA01}~\cite{Chen_2010} & 152 & 38 &  5.7 & 4.6 &  0.4 &  4$\times$10\ex{-5} & 1.1 \\
-\texttt{TONBII}~\cite{Du_2010} & 44 & 35 &  5.1 & 4.8 &  0.86 &  1$\times$10\ex{-4} & 1.5 \\
+\texttt{KAXQIL}~\cite{Banerjee2012} & 104  & 133 &  5.2 & 4.1 &  0.005 &  3\,10\ex{-8}  & 1.4 \\
+\texttt{XUNSOQ}~\cite{Abrahams_2014} & 38  & 48 &  5.6 & 4.8 &  0.23 &  7\,10\ex{-6} & 3.5 \\
+\texttt{BAEDTA01}~\cite{Chen_2010} & 152 & 38 &  5.7 & 4.6 &  0.4 &  4\,10\ex{-5} & 1.1 \\
+\texttt{TONBII}~\cite{Du_2010} & 44 & 35 &  5.1 & 4.8 &  0.86 &  1\,10\ex{-4} & 1.5 \\
 \hline
-\texttt{VOHQIS}~\cite{Wragg_2001} & 51 & 48 &  5.7 & 3.9 &  0.01 &  6$\times$10\ex{-8} & 2.6\\
-\texttt{QOZDOY}~\cite{Zhang_2001} & 52  & 37 &  5.6 & 5.0 &  0.45 &  7$\times$10\ex{-5} & 3.7 \\
-\texttt{GUMDEZ}~\cite{Yin_2014} & 56 & 42 &  5.5 & 5.1 &  0.55 &  7$\times$10\ex{-5} & 3.0 \\
-\texttt{MISQIQ}~\cite{Tong_2013} & 140 & 37 &  4.6 & 4.5 &  1.4 &  2$\times$10\ex{-4} & 2.3 \\
+\texttt{VOHQIS}~\cite{Wragg_2001} & 51 & 48 &  5.7 & 3.9 &  0.01 &  6\,10\ex{-8} & 2.6\\
+\texttt{QOZDOY}~\cite{Zhang_2001} & 52  & 37 &  5.6 & 5.0 &  0.45 &  7\,10\ex{-5} & 3.7 \\
+\texttt{GUMDEZ}~\cite{Yin_2014} & 56 & 42 &  5.5 & 5.1 &  0.55 &  7\,10\ex{-5} & 3.0 \\
+\texttt{MISQIQ}~\cite{Tong_2013} & 140 & 37 &  4.6 & 4.5 &  1.4 &  2\,10\ex{-4} & 2.3 \\
 \hline
 \end{tabular}
 \caption{Transport and thermodynamic performances of top-performing structures of CoRE MOF 2019 screened out by the approach developed in the section~\ref{sct:diff_screen}. The thermodynamic properties are determined using xenon uptake at \SI{1}{\bar} and \SI{298}{\kelvin}, $s_0\ex{Xe/Kr}$ and $s_1\ex{Xe/Kr}$ that correspond to the xenon/krypton adsorption selectivity values respectively at infinite dilution and ambient pressure condition. The pore size is defined as the largest cavity along a free diffusion path D$_{if}\ex{UFF}$ and the channel size is defined using the pore limiting diameter PLD\ex{UFF} using atom radii defined by the UFF. The transport properties are evaluated using the xenon/krypton diffusion selectivity $s\e{diff}\ex{Xe/Kr}$ and the xenon diffusion coefficient $D\e{diff}\ex{Xe}$ calculated by the MD-based screening presented above. }\label{table:diff}
@@ -359,7 +361,7 @@ This noteworthy behavior of adsorption  \texttt{ADOGEH} can be explained by a sp
 
 Beyond the specific cases of \texttt{OQESAF} and \texttt{ADOGEH}, other nanoporous materials exhibit lower diffusion selectivity values. For instance, all the other materials listed in Table~\ref{table:diff} have diffusion selectivity values ranging between $0.2$ and $1.4$. The diffusion selectivity and xenon diffusion coefficient vary depending on the shape and size distribution of the porous channels. A weak correlation can be observed between the pore size characteristics (LCD\ex{UFF}$-$PLD\ex{UFF}) and diffusion performance for structures with an LCD\ex{UFF} value below \SI{6}{\angstrom} --- in these structures, pore size has a higher chance of influencing the transport properties. The correlation arises from the fact that a higher difference between LCD and PLD corresponds to a higher energy barrier for xenon to move within the channels, consequently decreasing the diffusion coefficient. However, when considering all available structures, the correlation disappears since the movement of diffusing xenon is less influenced by the pore walls in materials with higher LCD values. Moreover, for LCD values higher than \SI{7}{\angstrom}, the diffusion coefficient stabilizes around $10^{-5}$\si{\square\cm\per\s}, as depicted in Figure\ref{fgr:diff_H_lcd}. 
 
-Structures with high ambient-pressure selectivity (Figure~\ref{fgr:porediff_c}) exhibit a negative linear relationship between the LCD-PLD difference and xenon/krypton diffusion selectivity. This is due to the fact that highly selective materials have pore sizes close to that of xenon atom, as explained in previous chapters. The effect on the Xe diffusion coefficient can also be extended to the Xe/Kr diffusion selectivity, as suggested by the noisy and stable values of krypton diffusion coefficients around $3\times10^{-5}$\si{\square\cm\per\s} (refer to Figure\ref{fgr:diff_s0_lcd}). The weakness of the correlation can be explained by the inherent uncertainty in the MD methodology for diffusion coefficient calculation (estimated to be around {20\%} for the material \texttt{KAXQIL}), as well as other phenomena not accounted for by the simple arithmetic difference of two pore characteristics. The tortuosity of the channel, for instance, could contribute to the comprehension of diffusion coefficient values, but it is challenging to quantify in a tridimensional space. While various channel shapes will be qualitatively discussed in the following examples, the current work does not make an attempt to quantify these effects.
+Structures with high ambient-pressure selectivity (Figure~\ref{fgr:porediff_c}) exhibit a negative linear relationship between the LCD-PLD difference and xenon/krypton diffusion selectivity. This is due to the fact that highly selective materials have pore sizes close to that of xenon atom, as explained in previous chapters. The effect on the Xe diffusion coefficient can also be extended to the Xe/Kr diffusion selectivity, as suggested by the noisy and stable values of krypton diffusion coefficients around $3\,10^{-5}$\si{\square\cm\per\s} (refer to Figure\ref{fgr:diff_s0_lcd}). The weakness of the correlation can be explained by the inherent uncertainty in the MD methodology for diffusion coefficient calculation (estimated to be around {20\%} for the material \texttt{KAXQIL}), as well as other phenomena not accounted for by the simple arithmetic difference of two pore characteristics. The tortuosity of the channel, for instance, could contribute to the comprehension of diffusion coefficient values, but it is challenging to quantify in a tridimensional space. While various channel shapes will be qualitatively discussed in the following examples, the current work does not make an attempt to quantify these effects.
 
 \begin{figure}[ht]
   \centering
@@ -385,7 +387,7 @@ Structures with high ambient-pressure selectivity (Figure~\ref{fgr:porediff_c}) 
 
 The highly selective materials displayed in Figure~\ref{fgr:porediff_c} are presented in Table~\ref{table:diff}. The negative linear relation between the LCD-PLD difference and the Xe/Kr diffusion selectivity or the Xe diffusion coefficient can be reaffirmed by examining the values in Table~\ref{table:diff} for materials with 1D channels (except \texttt{ADOGEH}). Two categories will be created to explore the tortuosity difference between these materials.
 
-Materials with nanopores composed of pseudo-spherical cavities connected by cylindrical channels following a straight line are the first category, as shown in Figure~\ref{fgr:tube_cavities}. These channels would in fact have very low tortuosity if evaluated. For \texttt{TONBII}\todo{present it}, the very small LCD-PLD difference explains the relatively high diffusion selectivity near $1$. There is hardly any difference in the diffusion of xenon and krypton in the channels of this material. As the LCD value increases for similar PLD values, the diffusion selectivity of materials like \texttt{BAEDTA01} and \texttt{XUNSOQ}\todo{present them} decreases, as indicated in Table~\ref{table:diff}. This drop can be attributed to a lower xenon diffusion coefficient.
+Materials with nanopores composed of pseudo-spherical cavities connected by cylindrical channels following a straight line are the first category, as shown in Figure~\ref{fgr:tube_cavities}. These channels would in fact have very low tortuosity if evaluated. For \texttt{TONBII}, a Fe(2,6-NDC) MOF material,~\cite{Du_2010} the very small LCD-PLD difference explains the relatively high diffusion selectivity near $1$. There is hardly any difference in the diffusion of xenon and krypton in the channels of this material. As the LCD value increases for similar PLD values, the diffusion selectivity decreases for materials like \texttt{BAEDTA01}, a Ba$_2$(EDTA)$\dot$2.5H$_2$O MOF material, and \texttt{XUNSOQ}, an isomeric ionic lithium isonicotinate three-dimensional MOF network,\autocite{Abrahams_2014}, as indicated in Table~\ref{table:diff}. This drop can be attributed to a lower xenon diffusion coefficient.
 
 \begin{figure}[ht]
   \centering
@@ -610,7 +612,7 @@ With this parameterization, this ML model predicts the $\log_{10}$ of the diffus
     \caption{ (a) Comparison of the $\log_{10}$ of the diffusion coefficient predicted by an ML model and the true values. (b) Root mean squared errors on the same test set (20\% of all data) as a function of the fraction of the training set used to train smaller models. The error decreases as the amount of data increases and seems to stabilize near $0.25$. }
 \end{figure}
 
-The training curve (Figure~\ref{fgr:training_curve_diff}) was examined to assess whether the model had sufficient training data or required additional data. As the amount of training data increased, the error converged to $0.25$, indicating that no further data was necessary for training the model. However, it is conceivable to train a similar model using less data (50\% instead of 80\% of the total data could probably suffice to train a similar model).\todo{Add cross-validation performance as a point of comparison}
+The training curve (Figure~\ref{fgr:training_curve_diff}) was examined to assess whether the model had sufficient training data or required additional data. As the amount of training data increased, the error converged to $0.25$, indicating that no further data was necessary for training the model. However, it is conceivable to train a similar model using less data (50\% instead of 80\% of the total data could probably suffice to train a similar model). \todo{Add cross-validation performance as a point of comparison}
 
 \begin{figure}[ht]
   \centering
