--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -30,7 +30,7 @@ To gain a better understanding of the Brownian motion of suspended particles in 
 \begin{equation}\label{eq:einstein}
   \langle {r(t)}^2 \rangle = 2dD\e{diff}t = 6D\e{diff}t
 \end{equation}
-where  $d$ is the dimension of the space in which the particle diffuses ($d=3$ in a volume) and $r(t)$ is the displacement of a particle from the time $0$ to $t$. The brackets represent the average over all independent trajectories (different particles and different time origins). This equation can be generalized to the diffusion of an adsorbate in the adsorbed phase, which describes the ease of particle movement within a nanoporous material. A low diffusion coefficient indicates limited access to the structure's pores, as illustrated in Figure~\ref{fgr:intro_diffusion}. It is worth mentioning that in porous media, non-Fickian diffusion processes can occur, the MSD has a linear relation to time. For example, when particles are confined in a one-dimensional channel that does not allow a particle to jump over another, the dynamics is described by a single file diffusion equation, and the MSD has square root relation to time.\autocite{Levitt_1973}
+where  $d$ is the dimension of the space in which the particle diffuses ($d=3$ in a volume) and $r(t)$ is the displacement of a particle from the time $0$ to $t$. The brackets represent the average on all independent trajectories (different particles and different time origins). This equation can be generalized to the diffusion of an adsorbate in the adsorbed phase, which describes the ease of particle movement within a nanoporous material. A low diffusion coefficient indicates limited access to the structure's pores, as illustrated in Figure~\ref{fgr:intro_diffusion}. It is worth mentioning that in porous media, non-Fickian diffusion processes can occur, the MSD has a linear relation to time. For example, when particles are confined in a one-dimensional channel that does not allow a particle to jump over another, the dynamics is described by a single file diffusion equation, and the MSD has square root relation to time.\autocite{Levitt_1973}
 
 To model the diffusion coefficient of xenon and krypton inside nanoporous materials, molecular simulations of the adsorbate displacements will be utilized. Although alternative approaches such as the Green-Kubo equation exist, the comparatively less complex Einstein law is preferred for self-diffusion calculations, as demonstrated by this cited comparative study~\cite{Maginn_2020}. This section will focus on various simulation techniques that can be used for evaluating diffusion in high-throughput screenings. Different methods of assessing the MSD of diffusing particles will be presented, starting from the straightforward approach of molecular dynamics to faster methodologies more suitable for screenings, such as machine-learned surrogate models and kinetic Monte Carlo simulations.
 
@@ -387,7 +387,7 @@ Structures with high ambient-pressure selectivity (Figure~\ref{fgr:porediff_c}) 
 
 The highly selective materials displayed in Figure~\ref{fgr:porediff_c} are presented in Table~\ref{table:diff}. The negative linear relation between the LCD-PLD difference and the Xe/Kr diffusion selectivity or the Xe diffusion coefficient can be reaffirmed by examining the values in Table~\ref{table:diff} for materials with 1D channels (except \texttt{ADOGEH}). Two categories will be created to explore the tortuosity difference between these materials.
 
-Materials with nanopores composed of pseudo-spherical cavities connected by cylindrical channels following a straight line are the first category, as shown in Figure~\ref{fgr:tube_cavities}. These channels would in fact have very low tortuosity if evaluated. For \texttt{TONBII}, a Fe(2,6-NDC) MOF material,~\cite{Du_2010} the very small LCD-PLD difference explains the relatively high diffusion selectivity near $1$. There is hardly any difference in the diffusion of xenon and krypton in the channels of this material. As the LCD value increases for similar PLD values, the diffusion selectivity decreases for materials like \texttt{BAEDTA01}, a Ba$_2$(EDTA)$\dot$2.5H$_2$O MOF material, and \texttt{XUNSOQ}, an isomeric ionic lithium isonicotinate three-dimensional MOF network,\autocite{Abrahams_2014}, as indicated in Table~\ref{table:diff}. This drop can be attributed to a lower xenon diffusion coefficient.
+Materials with nanopores composed of pseudo-spherical cavities connected by cylindrical channels following a straight line are the first category, as shown in Figure~\ref{fgr:tube_cavities}. These channels would in fact have very low tortuosity if evaluated. For \texttt{TONBII}, a Fe(2,6-NDC) MOF material,~\cite{Du_2010} the very small LCD-PLD difference explains the relatively high diffusion selectivity near $1$. There is hardly any difference in the diffusion of xenon and krypton in the channels of this material. As the LCD value increases for similar PLD values, the diffusion selectivity decreases for materials like \texttt{BAEDTA01}, a Ba$_2$(EDTA)$\cdot$2.5H$_2$O MOF material, and \texttt{XUNSOQ}, an isomeric ionic lithium isonicotinate three-dimensional MOF network,\autocite{Abrahams_2014}, as indicated in Table~\ref{table:diff}. This drop can be attributed to a lower xenon diffusion coefficient.
 
 \begin{figure}[ht]
   \centering
