--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 % Distributed under CC-BY-SA-NC license 4.0
 % Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
 
-\documentclass[12pt, a4paper, cotutelle]{book}
+\documentclass[12pt, a4paper]{book}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{classicthesis}
@@ -381,8 +381,8 @@
 % PSL cover page
 \usepackage{psl-cover}
 \pslassetspath{figures/psl}
-\otherinstitute{le CEA Marcoule}
-\logootherinstitute{figures/psl/logo-cea.pdf}
+% \otherinstitute{le CEA Marcoule}
+% \logootherinstitute{figures/psl/logo-cea.pdf}
 
 \title{Origines microscopiques de la séparation xénon/krypton dans les matériaux nanoporeux}
 \entitle{Screening of the microscopic origins of Xe/Kr separation in nanoporous materials}
