--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -166,7 +166,7 @@ To account for the randomness in the initial position of xenon (block pockets ha
 
 Increased confidence in the method led to the exploration of higher timescales beyond the reach the previous MD simulation, as the occurrence of the diffusion regime was observed at the \SI{10}{\ns} timescale. An MD simulation is consequently performed with a 1~\si{\fs}-timestep and 2.5 billion steps on the same \texttt{KAXQIL} structure. With this longer simulation, much larger timescales could be probed such as the one between {2} to {47}~\si{\ns}, which was confirmed as a linear diffusion regime in the MSD plot. A self-diffusion coefficient value of $1.7\,10^{-8}$~\si{\square\cm\per\s} was determined for xenon. This value is slightly lower than the one determined in the yet non-linear regime ($\alpha=0.7$) from the previous approach.
 
-This previous simulation can be considered as the most accurate one, but it is not scalable on an entire database of thousands of structures since it requires 5--6 days to run all the MD steps. To speed up the process, we propose an increase of the timestep value to 5~\si{\fs} with 5 times less MD steps, hence reducing the time required to the order of a day. This simulation presents a linear regime in the {2}--{47}~\si{\ns} timescale with a diffusion coefficient value of \todo{$2.3\,10^{-8}$~\si{\square\cm\per\s}}, which is consistent with the previously reported approaches. 
+This previous simulation can be considered as the most accurate one, but it is not scalable on an entire database of thousands of structures since it requires 5--6 days to run all the MD steps. To speed up the process, we propose an increase of the timestep value to 5~\si{\fs} with 5 times less MD steps (500 million), hence reducing the time required to the order of a day. This simulation presents a linear regime in the {2}--{47}~\si{\ns} timescale with a diffusion coefficient value of \todo{$2.3\,10^{-8}$~\si{\square\cm\per\s}}, which is consistent with the previously reported approaches. 
 
 \begin{figure}[ht]
   \centering
